@@ -24,6 +24,8 @@
 2008-06-19  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/channel.c (ImportImageChannel): Convert to use pixel
+        iterators.<BR>
   <LI> Magick++/lib/Image.cpp (quantize): Error measurement support was
         being performed incorrectly.  SyncImage() is not needed here.
 
