@@ -1,6 +1,8 @@
 2008-06-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
-        * Magick++/lib/Image.cpp (quantize): Error measurement support was
+	* magick/channel.c (ImportImageChannel): Convert to use pixel
+	iterators.
+	* Magick++/lib/Image.cpp (quantize): Error measurement support was
 	being performed incorrectly.  SyncImage() is not needed here.
 
 2008-06-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
